// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`key > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-0[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-0[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-0[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-0[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-0[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

<div
    data-testid="testing"
  >
    <kbd
      class="emotion-0 emotion-1"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-0[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-0[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-0[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-0[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-0[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

<div
    data-testid="testing"
  >
    <kbd
      class="emotion-0 emotion-1"
      data-disabled="true"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_true__m4c9ow1a style_undefined_compound_60__m4c9ow30"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled primary 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-0[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-0[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-0[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-0[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-0[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

<div
    data-testid="testing"
  >
    <kbd
      class="emotion-0 emotion-1"
      data-disabled="true"
      data-prominence="default"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_primary__m4c9ow9 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_true__m4c9ow1a style_undefined_compound_36__m4c9ow2c"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled strong 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-0[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-0[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-0[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-0[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-0[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

<div
    data-testid="testing"
  >
    <kbd
      class="emotion-0 emotion-1"
      data-disabled="true"
      data-prominence="strong"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_stronger__m4c9owk style_variant_caption__m4c9ows style_disabled_true__m4c9ow1a style_undefined_compound_62__m4c9ow32"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled strong primary 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-0[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-0[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-0[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-0[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-0[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

<div
    data-testid="testing"
  >
    <kbd
      class="emotion-0 emotion-1"
      data-disabled="true"
      data-prominence="strong"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_primary__m4c9ow9 style_prominence_strong__m4c9owj style_variant_caption__m4c9ows style_disabled_true__m4c9ow1a style_undefined_compound_37__m4c9ow2d"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders primary 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-0[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-0[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-0[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-0[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-0[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

<div
    data-testid="testing"
  >
    <kbd
      class="emotion-0 emotion-1"
      data-prominence="default"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_primary__m4c9ow9 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_0__m4c9ow1c style_undefined_compound_72__m4c9ow3c"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders small 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-0[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-0[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-0[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-0[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-0[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

<div
    data-testid="testing"
  >
    <kbd
      class="emotion-0 emotion-1"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="small"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_captionSmall__m4c9owt style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders strong 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-0[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-0[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-0[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-0[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-0[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

<div
    data-testid="testing"
  >
    <kbd
      class="emotion-0 emotion-1"
      data-prominence="strong"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_stronger__m4c9owk style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_26__m4c9ow22 style_undefined_compound_74__m4c9ow3e"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders strong primary 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: default;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #e9eaeb;
  min-width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-prominence='strong'] {
  background-color: #151a2d;
  border-color: #d9dadd;
}

.emotion-0[data-prominence='strong'][data-disabled="true"] {
  background-color: #e9eaeb;
  border-color: #e9eaeb;
}

.emotion-0[data-disabled='true'] {
  background-color: #f3f3f4;
  border-color: #d9dadd;
  cursor: not-allowed;
}

.emotion-0[data-sentiment="primary"] {
  background-color: #f1eefc;
  border-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'] {
  background-color: #8c40ef;
}

.emotion-0[data-sentiment="primary"][data-prominence='strong'][data-disabled="true"] {
  background-color: #e5dbfd;
}

.emotion-0[data-sentiment="primary"][data-disabled='true'] {
  background: #f6f5fd;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-0[data-size="small"] {
  min-width: 1.25rem;
  height: 1.25rem;
}

<div
    data-testid="testing"
  >
    <kbd
      class="emotion-0 emotion-1"
      data-prominence="strong"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_primary__m4c9ow9 style_prominence_strong__m4c9owj style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_1__m4c9ow1d style_undefined_compound_73__m4c9ow3d"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;
